# daily-firehose

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  manage.py  pyproject.toml
daily_firehose/: asgi.py  settings.py  urls.py  wsgi.py
feeds/: admin.py  api.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
feeds/management/commands/: create_api_token.py  refresh_feeds.py
feeds/migrations/: 0001_initial.py  0002_category_feed_category_savedarticle.py  0003_apitoken.py  0004_newsletterissue.py  0005_alter_userpreference_theme.py  0006_userpreference_focus_mode.py
static/css/: site.css
static/js/: article-actions.js
templates/: base.html
templates/feeds/: digest.html  feed_detail.html  feed_list.html  newsletter_detail.html  opml_import.html  preferences.html  today.html
templates/feeds/includes/: article_card.html
templates/registration/: login.html
